# farewell-ex

./: .gitignore  AUDIT-FINAL.md  README.md
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts
data/: registry.json
data/context/: farewell-ex.md
farewell-companion/: module.prop  post-fs-data.sh  sepolicy.rule
farewell-companion/xposed/: FarewellXposed.java
farewell-companion/zygisk/: main.cpp
knowledge/: INDEX.md  feature-catalog.md  leftover.md  rust-sdk.md
knowledge/index/: 01-SmartPack-Kernel-Manager.md  02-Xtra-Kernel-Manager.md  03-RvKernel-Manager.md  04-ZKM.md  05-AZenith.md  06-Encore.md  07-SkiaShift.md  08-COPG.md  09-DPIS.md  10-Shizuku.md  11-Shizuku-API.md
knowledge/modules/: 12-sysfs-rw.md  13-kotlin-bridge.md  14-encore-tweaks.md  15-skiashift.md  16-smartpack-catalog.md  17-dpis.md  18-zkm.md  19-azenith.md  20-copg-shizuku-rvkernel.md  21-zygisknext.md  22-vector.md  23-kernelsu-next.md  24-zn-auditpatch.md  25-logfox.md  (+5 more)
rust/kernel-manager/: Cargo.toml  logging.md
rust/kernel-manager/.cargo/: config.toml
rust/kernel-manager/src/: boot_qcom.rs  checker.rs  cpu.rs  daemon.rs  disk.rs  display.rs  display_control.rs  display_xiaomi.rs  gpu.rs  haptic.rs  hotplug.rs  io.rs  lib.rs  memory.rs  network.rs  power.rs  power_xiaomi.rs  renderer.rs  scheduler.rs  spoof.rs  stune.rs  sysctl_qcom.rs  sysfs.rs  thermal.rs  tier.rs  touch.rs  wake.rs
tools/: farewell.rc  farewell_service.cil  farewelld  farewelld.c  sepolicy.rule
training/: plan.md
vector/: module.prop
zygisk/: module.prop  post-fs-data.sh
(+3234 files in other folders)
