[package]
name = "farewell_native"
version = "1.0.0"
edition = "2021"
description = "Native library for Farewell Kernel Manager"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
rustix = { version = "0.38", default-features = false, features = ["fs"] }
once_cell = "1.19"
parking_lot = "0.12"
android-properties = "0.2"

[profile.release]
opt-level = "z"
lto = "fat"
strip = "symbols"
panic = "abort"
codegen-units = 1
overflow-checks = false
